; ModuleID = '/home/carl/AnghaBench/libgit2/tests/threads/extr_diff.c_free_trees.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/threads/extr_diff.c_free_trees.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_a = common dso_local global i32* null, align 8
@_b = common dso_local global i32* null, align 8
@_check_counts = common dso_local global i64 0, align 8
@_counts = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @free_trees to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_trees() #0 {
  %1 = load i32*, i32** @_a, align 8
  %2 = call i32 @git_tree_free(i32* %1)
  store i32* null, i32** @_a, align 8
  %3 = load i32*, i32** @_b, align 8
  %4 = call i32 @git_tree_free(i32* %3)
  store i32* null, i32** @_b, align 8
  %5 = load i64, i64* @_check_counts, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %24

7:                                                ; preds = %0
  %8 = load i32*, i32** @_counts, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  %10 = call i32 @git_atomic_get(i32* %9)
  %11 = call i32 @cl_assert_equal_i(i32 288, i32 %10)
  %12 = load i32*, i32** @_counts, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 1
  %14 = call i32 @git_atomic_get(i32* %13)
  %15 = call i32 @cl_assert_equal_i(i32 112, i32 %14)
  %16 = load i32*, i32** @_counts, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 2
  %18 = call i32 @git_atomic_get(i32* %17)
  %19 = call i32 @cl_assert_equal_i(i32 80, i32 %18)
  %20 = load i32*, i32** @_counts, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 3
  %22 = call i32 @git_atomic_get(i32* %21)
  %23 = call i32 @cl_assert_equal_i(i32 96, i32 %22)
  br label %24

24:                                               ; preds = %7, %0
  ret void
}

declare dso_local i32 @git_tree_free(i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_atomic_get(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
